--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,16 @@
         <div class="form-group">
             <label for="klasse">Klassetrin</label>
             <select class="form-control" id="klasse">
-                <option value="0-3">0-3 klasse</option>
-                <option value="4-6">4-6 klasse</option>
-                <option value="7-9">7-9 klasse</option>
+                <option value="0">0. klasse</option>
+                <option value="1">1. klasse</option>
+                <option value="2">2. klasse</option>
+                <option value="3">3. klasse</option>
+                <option value="4">4. klasse</option>
+                <option value="5">5. klasse</option>
+                <option value="6">6. klasse</option>
+                <option value="7">7. klasse</option>
+                <option value="8">8. klasse</option>
+                <option value="9">9. klasse</option>
                 <option value="10">10 klasse</option>
             </select>
         </div>
